# autonovel

./: .env.example  ANTI-PATTERNS.md  ANTI-SLOP.md  CRAFT.md  MAPPA_FLUSSO_APPLICAZIONE.md  PIPELINE.md  README.md  WORKFLOW.md  adversarial_edit.py  audiobook_voices.json  build_arc_summary.py  build_outline.py  canon.md  compare_chapters.py  draft_chapter.py  evaluate.py  gen_art.py  gen_art_directions.py  gen_audiobook.py  gen_audiobook_script.py  gen_canon.py  gen_characters.py  gen_outline.py  gen_outline_part2.py  gen_revision.py  gen_world.py  llm.py  outline.md  program.md  pyproject.toml  reader_panel.py  results.tsv  review.py  run_pipeline.py  seed.py  seed.txt  state.json  utils.py  voice.md
chapters/: ch_01.md  ch_02.md
docs/: architecture_and_flows.md
openspec/: config.yaml
openspec/specs/: local-tts.md
story_docs/GeneralProgram2/: 00_Master_Outline_FINAL.md  01_Five_Act_Chapter_Outline_FINAL.md  02_Truth_Gates_Reveal_Schedule_FINAL.md  03_Character_Relationships_Arcs_FINAL.md  04_Character_Voices_Style_Rules_FINAL.md  05_Ability_System_Faction_Rules_FINAL.md  06_Timeline_Foreshadowing_Ledger_FINAL.md  07_Payoff_Retention_Rules_FINAL.md  08_Chapter_Pacing_Emotional_Map_FINAL.md
tools/: book_hard_rules.py  chapter_hard_rules.py  continuity_lint.py  hard_rules_common.py  import_black_rainbow.py  volume_hard_rules.py
typeset/: build_tex.py
